--- a/ZoppaToml/Resources/Message.ja.resx
+++ b/ZoppaToml/Resources/Message.ja.resx
@@ -175,9 +175,120 @@
     <value>時間が取得できませんでした。:{0}</value>
   </data>
   <data name="E020" xml:space="preserve">
-    <value>値は添え字参照できません。</value>
+    <value>値はインデックス参照できません。</value>
   </data>
   <data name="E021" xml:space="preserve">
     <value>値は名前参照できません。</value>
+  </data>
+  <data name="E022" xml:space="preserve">
+    <value>文字列を取得できませんでした。:{0}</value>
+  </data>
+  <data name="E023" xml:space="preserve">
+    <value>指定のキーの要素がありません。</value>
+  </data>
+  <data name="E024" xml:space="preserve">
+    <value>テーブルはインデックス参照できません。</value>
+  </data>
+  <data name="E025" xml:space="preserve">
+    <value>指定の名称のテーブルがありません。:{0}</value>
+  </data>
+  <data name="E026" xml:space="preserve">
+    <value>指定の名称の要素がありません。:{0}</value>
+  </data>
+  <data name="E027" xml:space="preserve">
+    <value>配列の範囲外を指定しています。</value>
+  </data>
+  <data name="E028" xml:space="preserve">
+    <value>テーブル定義は新しい行である必要があります。:{0}</value>
+  </data>
+  <data name="E029" xml:space="preserve">
+    <value>キー、値は新しい行である必要があります。:{0}</value>
+  </data>
+  <data name="E030" xml:space="preserve">
+    <value>テーブルが閉じられていません。:{0}</value>
+  </data>
+  <data name="E031" xml:space="preserve">
+    <value>テーブル配列が閉じられていません。:{0}</value>
+  </data>
+  <data name="E032" xml:space="preserve">
+    <value>キーの解析に失敗しました。:{0}</value>
+  </data>
+  <data name="E033" xml:space="preserve">
+    <value>キーが見つかりません。:{0}</value>
+  </data>
+  <data name="E034" xml:space="preserve">
+    <value>キーと値の間には 1 つのイコール記号が必要です。:{0}</value>
+  </data>
+  <data name="E035" xml:space="preserve">
+    <value>値の解析に失敗しました。:{0}</value>
+  </data>
+  <data name="E036" xml:space="preserve">
+    <value>文字列の終端が見つかりません。:{0}</value>
+  </data>
+  <data name="E037" xml:space="preserve">
+    <value>3つ以上の一重引用符の連続は許可されません。:{0}</value>
+  </data>
+  <data name="E038" xml:space="preserve">
+    <value>項目の要素がカンマで区切られていません。:{0}</value>
+  </data>
+  <data name="E039" xml:space="preserve">
+    <value>インラインテーブルの要素がカンマで区切られていません。:{0}</value>
+  </data>
+  <data name="E040" xml:space="preserve">
+    <value>インラインテーブルの解析に失敗しました。:{0}</value>
+  </data>
+  <data name="E041" xml:space="preserve">
+    <value>インラインテーブルが閉じられていません。:{0}</value>
+  </data>
+  <data name="E042" xml:space="preserve">
+    <value>配列の要素がカンマで区切られていません。:{0}</value>
+  </data>
+  <data name="E043" xml:space="preserve">
+    <value>配列の解析に失敗しました。:{0}</value>
+  </data>
+  <data name="E044" xml:space="preserve">
+    <value>配列が閉じられていません。:{0}</value>
+  </data>
+  <data name="E045" xml:space="preserve">
+    <value>解析できないリテラルです。:{0}</value>
+  </data>
+  <data name="E046" xml:space="preserve">
+    <value>数値に使用できない文字です。:{0}</value>
+  </data>
+  <data name="E047" xml:space="preserve">
+    <value>数値の解析に失敗しました。:{0}</value>
+  </data>
+  <data name="E048" xml:space="preserve">
+    <value>桁数を超えています。:{0}</value>
+  </data>
+  <data name="E049" xml:space="preserve">
+    <value>アンダーバーの両側には1桁以上の数字が必要です。:{0}</value>
+  </data>
+  <data name="E050" xml:space="preserve">
+    <value>指数表記を間違えています。:{0}</value>
+  </data>
+  <data name="E051" xml:space="preserve">
+    <value>小数点は一つまでです。:{0}</value>
+  </data>
+  <data name="E052" xml:space="preserve">
+    <value>小数点の両側には1桁以上の数字が必要です。:{0}</value>
+  </data>
+  <data name="E053" xml:space="preserve">
+    <value>符号付きの16進数は許可されません。:{0}</value>
+  </data>
+  <data name="E054" xml:space="preserve">
+    <value>符号付きの8進数は許可されません。:{0}</value>
+  </data>
+  <data name="E055" xml:space="preserve">
+    <value>符号付きの2進数は許可されません。:{0}</value>
+  </data>
+  <data name="E056" xml:space="preserve">
+    <value>先行ゼロは許可されません。:{0}</value>
+  </data>
+  <data name="E057" xml:space="preserve">
+    <value>時間の解析に失敗しました。:{0}</value>
+  </data>
+  <data name="E058" xml:space="preserve">
+    <value>日付の解析に失敗しました。:{0}</value>
   </data>
 </root>
